# legacy_suturo_knowledge

./: .gitignore
prolog_sandkasten/: test.pl
suturo_java_serviceclients/: .classpath  (+5 more)
suturo_knowledge_foodreasoner/: .classpath  .project  .start_demo.swp  CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml.fast  more.arff  set-pr2-master  start_all.sh  start_demo
suturo_knowledge_foodreasoner/launch/: reasoner_rosnode_gazebo.launch  reasoner_rosnode_lab.launch  reasoner_rosnode_projectroom.launch  suturo_knowledge_foodreasoner.launch
suturo_knowledge_foodreasoner/lib/iai_maps/owl/: room.owl.in
suturo_knowledge_foodreasoner/owl/: .gitignore  demo.owl.in  file.txt  gazebo_hierarchy.owl.in  gazebo_room.owl.in  lab_hierarchy.owl.in  orly.owl.in  suturo_knowledge_hierarchy.owl  suturo_knowledge_hierarchy.owl.in  suturo_objects.owl.in
suturo_knowledge_foodreasoner/prolog/: boolean_table  init.pl.in  storing.pl.in  suturo_knowledge_foodmanager.pl  suturo_knowledge_foodmanager.pl.in  suturo_knowledge_foodreasoner.pl.in  suturo_knowledge_java_interface.pl.in
suturo_knowledge_foodreasoner/raw_data/: 280414.arff  baguette.arff  bayesnet.model  bftree.model  classifier.model  combi.arff  convert.R  dlink.arff  filtered.model  j48.model  milestone4.arff  milestone4improved.arff  naivebayes.model  naivebayesupable.model  randomsubspace.model  randomtree.model  regression.model  vfi.model
suturo_knowledge_foodreasoner/raw_data/arff/: 280414baguette.arff  280414cafetfilter.arff  280414corny.arff  280414dlink.arff  280414r_containerbox.arff  280414wlanadapter.arff  corny.arff
suturo_knowledge_foodreasoner/raw_data/model/: 290414baguette.model  290414cafetfilter.model  290414dlink.model  290414r_containerbox.model  290414wlanadapter.model  bayesnet.model  bftree.model  filtered.model  naivebayes.model
suturo_knowledge_foodreasoner/scripts/: fastcompile  reasoner_local_gazebo  reasoner_local_lab  reasoner_local_projectroom.sh
(+55 files in other folders)
